--- a/style.css
+++ b/style.css
@@ -117,6 +117,21 @@ button {
 }
 button:hover {
     background-color: #5f9ea0;
+} 
+.intro-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f0f8ff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    color: #333;
+    z-index: 9999;
 }
 
 
