--- a/style.css
+++ b/style.css
@@ -184,5 +184,7 @@ textarea:focus {
   transform: scale(1.05);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
-
+#about {
+  display: none;
+}
 }
